--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0097a7</color>
     <color name="colorAccent">#428bca</color>
     <color name="white">#ffffff</color>
+    <color name="black_tranparent_20">#33232323</color>
 </resources>
