--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -2,13 +2,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_width="160dp"
-    android:layout_height="110dp"
-    android:layout_marginBottom="@dimen/margin_1"
-    android:layout_marginTop="@dimen/margin_1"
+    android:layout_width="140dp"
+    android:layout_height="100dp"
     android:foreground="?selectableItemBackground"
     card_view:cardCornerRadius="@dimen/margin_5"
-    card_view:cardElevation="@dimen/margin_0">
+    card_view:cardElevation="@dimen/margin_0"
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,6 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/image1" />
+            android:src="@drawable/image2" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
