--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -17,7 +17,7 @@
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_scrollFlags="scroll|enterAlways" />
 
-        <utils.AutoScrollViewPager
+        <mastersunny.unitedclub.utils.AutoScrollViewPager
             android:id="@+id/autoViewPager"
             android:layout_width="match_parent"
             android:layout_height="140dp"
