--- a/app/src/main/res/layout/most_used_item_layout.xml
+++ b/app/src/main/res/layout/most_used_item_layout.xml
@@ -22,6 +22,7 @@
             android:layout_height="@dimen/margin_40">
 
             <ImageView
+                android:id="@+id/item_image"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
@@ -56,14 +57,14 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/item_message"
+            android:id="@+id/item_offer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/image_layout"
             android:layout_marginTop="@dimen/margin_10"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="Flat Rs 300 OFF on fdgdgdfgfdgfdgfgdfgfdgfdgffdgfdgfdgfg"
+            android:text=""
             android:textSize="@dimen/text_size_18" />
 
         <TextView
