--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,5 +36,6 @@
     <dimen name="text_size_18">18sp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="logo_w_h">100dp</dimen>
 
 </resources>
