--- a/app/src/main/res/layout/content_item_details.xml
+++ b/app/src/main/res/layout/content_item_details.xml
@@ -14,6 +14,22 @@
         android:layout_margin="@dimen/margin_10"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Amazon"
+            android:textSize="@dimen/text_size_18" />
+
+        <TextView
+            android:id="@+id/item_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_10"
+            android:maxLines="2"
+            android:text="Great Indian Sale: Get Up to 90% Off fodsjfoisdjfodjsofjdsofdosfjodsjfdosfdfdsfdsf"
+            android:textSize="@dimen/text_size_16" />
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
