--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_5"
             android:layout_marginLeft="@dimen/margin_5"
+            android:layout_marginRight="@dimen/margin_5"
             android:layout_marginTop="@dimen/margin_10"
             app:layout_scrollFlags="scroll|enterAlways">
 
