--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -41,11 +41,6 @@
             android:title="@string/nav_share" />
 
         <item
-            android:id="@+id/nav_"
-            android:icon="@mipmap/ic_launcher"
-            android:title="@string/nav_share" />
-
-        <item
             android:id="@+id/nav_feedback"
             android:icon="@mipmap/ic_launcher"
             android:title="@string/nav_feedback" />
@@ -58,7 +53,7 @@
         <item
             android:id="@+id/nav_sign"
             android:icon="@mipmap/ic_launcher"
-            android:title="@string/nav_sign" />
+            android:title="@string/nav_signin" />
 
     </group>
 </menu>
