Adding popular activity

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -44,7 +44,7 @@
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="20dp" />
 
         <TextView
