--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,11 +4,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/nav_home" />
         <item
             android:id="@+id/nav_grab"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_thumb_up_black_24dp"
             android:title="@string/nav_grab" />
         <item
             android:id="@+id/nav_coupon"
@@ -27,17 +27,17 @@
 
         <item
             android:id="@+id/nav_notification"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_notifications_black_24dp"
             android:title="@string/nav_notification" />
 
         <item
             android:id="@+id/nav_settings"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/nav_settings" />
 
         <item
             android:id="@+id/nav_share"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_share_black_24dp"
             android:title="@string/nav_share" />
 
         <item
