--- a/app/src/main/res/layout/most_used_item_layout.xml
+++ b/app/src/main/res/layout/most_used_item_layout.xml
@@ -63,7 +63,8 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:text=""
-            android:textSize="@dimen/text_size_18" />
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_16" />
 
         <TextView
             android:id="@+id/offer_end_date"
