--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -36,7 +36,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:text="Popular Stories" />
+                android:text="Popular Stories"
+                android:textSize="@dimen/text_size_12" />
 
             <TextView
                 android:id="@+id/view_all_popular"
@@ -44,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="View All"
+                android:textSize="@dimen/text_size_12"
                 android:textStyle="bold" />
         </RelativeLayout>
 
