--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -47,21 +47,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Coupon Finder"
-                    android:textColor="@color/place_autocomplete_prediction_primary_text" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_10"
                     android:text="Grab coupons for Recharge"
-                    android:textColor="@color/place_autocomplete_prediction_primary_text" />
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_10"
                     android:text="Food, Movies and Bus Tickets"
-                    android:textColor="@color/place_autocomplete_prediction_primary_text" />
+                    android:textColor="@color/white" />
             </LinearLayout>
         </RelativeLayout>
 
