Adding popular activity

--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -5,20 +5,19 @@
     android:layout_width="140dp"
     android:layout_height="100dp"
     android:foreground="?selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/margin_5"
-    card_view:cardElevation="@dimen/margin_0"
+    card_view:cardCornerRadius="@dimen/margin_2"
+    card_view:cardElevation="@dimen/margin_5"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/most_used_item_background">
-
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/image2" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/paytm" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
