--- a/app/src/main/res/layout/most_used_item_layout.xml
+++ b/app/src/main/res/layout/most_used_item_layout.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:foreground="?selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/margin_5"
+    card_view:cardCornerRadius="@dimen/margin_2"
+    card_view:cardElevation="@dimen/margin_2"
     card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/most_used_item_background"
         android:padding="@dimen/margin_10">
 
         <RelativeLayout
