--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/most_used_item_background">
 
         <ImageView
+            android:id="@+id/popular_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
