Home Fragment Added

--- a/app/src/main/res/layout/popular_item_verical.xml
+++ b/app/src/main/res/layout/popular_item_verical.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:foreground="?selectableItemBackground"
     card_view:cardCornerRadius="@dimen/margin_5"
-    card_view:cardElevation="@dimen/margin_0"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardElevation="@dimen/margin_0">
 
     <RelativeLayout
         android:layout_width="match_parent"
