--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -11,7 +11,6 @@
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/htab_collapse_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -24,14 +23,8 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:id="@+id/store_image_bg"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/swiggy" />
+                    android:layout_height="210dp"
+                    android:background="@color/colorPrimary">
 
                     <RelativeLayout
                         android:id="@+id/coupon_offer_layout"
@@ -48,10 +41,11 @@
                             android:layout_alignParentLeft="true"
                             android:text="2 Coupons | "
                             android:textColor="@color/white"
-                            android:textSize="@dimen/text_size_12" />
+                            android:textSize="@dimen/text_size_12"
+                            android:visibility="gone" />
 
                         <TextView
-                            android:id="@+id/view_all_popular"
+                            android:id="@+id/total_offer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_toRightOf="@+id/coupon_number"
@@ -81,7 +75,8 @@
                             android:layout_marginLeft="@dimen/margin_20"
                             android:layout_toRightOf="@+id/store_image"
                             android:text="Folowing"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:visibility="gone" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -90,7 +85,8 @@
                             android:layout_marginLeft="@dimen/margin_20"
                             android:layout_toRightOf="@+id/store_image"
                             android:text="(Average: 4| 447 Reviews)"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:visibility="gone" />
                     </RelativeLayout>
                 </RelativeLayout>
             </FrameLayout>
@@ -114,7 +110,7 @@
                         android:layout_centerVertical="true"
                         android:gravity="left"
                         android:text="Amazon"
-                        android:textColor="@color/colorAccent"
+                        android:textColor="@color/white"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
@@ -126,6 +122,7 @@
             android:layout_height="40dp"
             android:background="@color/white"
             android:scrollbars="horizontal"
+            android:visibility="gone"
             app:tabIndicatorColor="@color/colorPrimary"
             app:tabIndicatorHeight="2dp"
             app:tabPaddingEnd="0dp"
@@ -133,11 +130,18 @@
             app:tabTextAppearance="@style/MineCustomTabText" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/offer_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin_5"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <!--<android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
 
     <!--<android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
