--- a/app/src/main/res/layout/store_offer_layout.xml
+++ b/app/src/main/res/layout/store_offer_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="@dimen/margin_40">
 
             <ImageView
-                android:id="@+id/item_image"
+                android:id="@+id/store_image"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
@@ -55,14 +55,14 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/item_offer"
+            android:id="@+id/store_offer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/image_layout"
             android:layout_marginTop="@dimen/margin_10"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text=""
+            android:text="flhdslifdslfhosdh"
             android:textColor="@android:color/black"
             android:textSize="@dimen/text_size_16" />
 
