--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="bottom"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         app:menu="@menu/navigation" />
 
 </android.support.design.widget.CoordinatorLayout>
